Fix submodule paths

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -90,7 +90,7 @@ fix = true
 select = ["ALL"]
 src = ["src", "tests"]
 target-version = "py311"
-extend-exclude = ["template", "typings", ".github"]
+extend-exclude = ["template", "submodules", ".github"]
 ignore = [
     # * ---------------------------------------------------------------------------- * #
     # * Changes below should persist in significant template updates.
