Migrate changes from notes. Simplify root structure, put cache dirs in one spot

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -87,6 +87,7 @@ reportUnusedCallResult = "none"
 
 [tool.ruff]
 fix = true
+cache-dir = ".cache/.ruff_cache"
 select = ["ALL"]
 src = ["src", "tests"]
 target-version = "py311"
