--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -29,9 +29,15 @@ Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_na
 Tracker = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues"
 
 [tool.fawltydeps]
-ignore_undeclared = ["copier_python", "rich"]
-ignore_unused = []
-
+output_format = "human_detailed"
+code = ["src"]
+deps = ["pyproject.toml"]
+ignore_unused = [
+    "nbconvert", # boilercv.pre_repro.export_notebook
+    "nbqa",      # boilercv.pre_repro.clean_notebook
+    "numba",     # Pin numba until it supports numpy>=1.25
+    "pyarrow",   # boilercv.init: pd.set_option("mode.string_storage", "pyarrow")
+]
 [tool.fawltydeps.custom_mapping]
 ipykernel = ["IPython"]
 
