--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -13,7 +13,7 @@ catch [System.Management.Automation.CommandNotFoundException] {
     $GLOBAL_PYTHON = 'python{{ python_version }}'
 }
 Invoke-Expression "$GLOBAL_PYTHON -m venv '.venv' --upgrade-deps"
-. './update.ps1'
+& './update.ps1'
 
 # * -------------------------------------------------------------------------------- * #
 # * Changes below should persist in significant template updates.
