--- a/template/.tools/scripts/first_time_setup.ps1.jinja
+++ b/template/.tools/scripts/first_time_setup.ps1.jinja
@@ -1,7 +1,7 @@
 git add -A
 git commit -m "Prepare template using blakeNaccarato/copier-python"
-git submodule add https://github.com/blakeNaccarato/copier-python.git submodules/template
-git submodule add https://github.com/blakeNaccarato/pylance-stubs-unofficial.git submodules/typings
+git submodule add --name template https://github.com/blakeNaccarato/copier-python.git submodules/template
+git submodule add --name typings https://github.com/blakeNaccarato/pylance-stubs-unofficial.git submodules/typings
 git add -A
 git commit -m "Add template and type stub submodules"
 git submodule deinit --all
