Pin versions, fix Renovate

--- a/template/renovate.json.jinja
+++ b/template/renovate.json.jinja
@@ -33,19 +33,19 @@
     {
       "description": "Ignore changerelease.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["dropseed/changerelease"]
     },
     {
       "description": "Ignore codeql.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["actions/checkout", "github/codeql-action"]
     },
     {
       "description": "Ignore main.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": [
         "blakeNaccarato/copier-python-workflow-setup",
         "codecov/codecov-action",
@@ -55,13 +55,13 @@
     {
       "description": "Ignore publish.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["actions/upload-pages-artifact", "actions/deploy-pages"]
     },
     {
       "description": "Ignore sphinx.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": [
         "dropseed/changerelease",
         "actions/checkout",
@@ -76,7 +76,7 @@
     {
       "description": "Ignore pre-commit dependencies managed by the template",
       "matchManagers": ["pre-commit"],
-      "matchFilenames": [".pre-commit-config.yaml"],
+      "matchFileNames": [".pre-commit-config.yaml"],
       "ignoreDeps": [
         "pre-commit/pre-commit-hooks",
         "psf/black",
@@ -90,7 +90,7 @@
     {
       "description": "Ignore requirements_both.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "ruff",
         "pytest",
@@ -103,13 +103,13 @@
     {
       "description": "Ignore requirements_core.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": ["copier", "dulwich", "flit_core", "pip", "wheel"]
     },
     {
       "description": "Ignore requirements_dev.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "fawltydeps",
         "ipykernel",
@@ -125,7 +125,7 @@
     {
       "description": "Ignore requirements_docs.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "myst-parser",
         "sphinx-autobuild",
