--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -20,7 +20,7 @@ jobs:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.2.3"
         with:
           python-version: "{{ python_version }}"
-      - run: "ruff --no-fix --format github ."
+      - run: "ruff --no-fix --output-format github ."
   pytest:
     runs-on: "{{ actions_runner }}"
     steps:
