Fix trailing comma

--- a/template/renovate.json.jinja
+++ b/template/renovate.json.jinja
@@ -95,7 +95,7 @@
         "pytest",
         "pytest-cov",
         "pytest-custom-exit-code",
-        "nb-clean",
+        "nb-clean"
       ]
     },
     {
