Let Ruff check private usage on its own

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -95,7 +95,7 @@ reportInvalidStubStatement = "warning"
 reportMatchNotExhaustive = "warning"
 reportMissingParameterType = "none"
 reportMissingTypeArgument = "warning"
-reportPrivateUsage = "warning"
+reportPrivateUsage = "none"                    # Ruff checks this well enough
 reportTypeCommentUsage = "warning"
 reportUnknownArgumentType = "none"
 reportUnknownLambdaType = "none"
