--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -134,7 +134,7 @@ preview = false
 unsafe-fixes = false
 cache-dir = ".cache/.ruff_cache"
 fixable = ["ALL"]
-extend-exclude = ["submodules"]
+extend-exclude = ["submodules/**"]
 extend-include = ["*.ipynb"]
 select = ["ALL"]
 target-version = "py311"
