Restore stub path

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -43,6 +43,7 @@ testpaths = "tests"
 xfail_strict = true
 
 [tool.pyright]
+stubPath = "submodules/typings"
 useLibraryCodeForTypes = true
 typeCheckingMode = "strict"
 # Default "true" in strict
