Explicitly set includes

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -43,6 +43,7 @@ testpaths = "tests"
 xfail_strict = true
 
 [tool.pyright]
+include = ["src", "tests", "docs"]
 stubPath = "submodules/typings"
 useLibraryCodeForTypes = true
 typeCheckingMode = "strict"
