--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -44,7 +44,7 @@ xfail_strict = true
 
 [tool.coverage.run]
 branch = true
-source = "{{ project_name }}"
+source = ["{{ project_name }}"]
 [tool.coverage.report]
 ignore_errors = true
 
