--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -183,6 +183,8 @@ extend-ignore = [
 
 [tool.ruff.format]
 skip-magic-trailing-comma = true
+[tool.ruff.isort]
+split-on-trailing-comma = false
 
 [tool.ruff.pydocstyle]
 convention = "google"
