Allow private member access in tests

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -203,6 +203,7 @@ convention = "google"
     "ARG001", # Allow unused arguments
     "S101",   # Allow assert
     "SIM300", # Allow constants (expectations) on the RHS
+    "SLF001", # Allow private member access in tests
 ]
 
 [tool.ruff.flake8-bugbear]
