Disable flaky check

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -84,7 +84,7 @@ reportOptionalIterable = "warning"
 reportOptionalContextManager = "warning"
 reportOptionalOperand = "warning"
 reportTypedDictNotRequiredAccess = "warning"
-reportPrivateImportUsage = "warning"
+reportPrivateImportUsage = "none"              # Flaky regarding "not exported"
 reportUnboundVariable = "warning"
 reportUnusedCoroutine = "none"                 # Handled by Ruff
 reportFunctionMemberAccess = "warning"
